[gd_scene load_steps=19 format=2]

[ext_resource path="res://World/houses/houseGandalf.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/world objects/forest1.tres" type="TileSet" id=2]
[ext_resource path="res://World/world objects/tree4.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/world objects/tree6.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/room/chapter2_entrance.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/KinematicBody2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/path_arrow.tscn" type="PackedScene" id=8]
[ext_resource path="res://intro/picture/pause.png" type="Texture" id=9]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://intro/pause_menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://levels/Script/gandalfHouse_Outside.gd" type="Script" id=13]
[ext_resource path="res://NPC/Gandalf.tscn" type="PackedScene" id=14]
[ext_resource path="res://NPC/analexius.tscn" type="PackedScene" id=15]
[ext_resource path="res://World/magical chest.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 16.5 )

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 10 )

[node name="gandalfHouse_Outside" type="Node2D"]
script = ExtResource( 13 )

[node name="floor1" type="TileMap" parent="."]
position = Vector2( 161, 87 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -393227, 20, 0, -393226, 20, 0, -393225, 20, 0, -393224, 20, 0, -393223, 20, 0, -393222, 20, 0, -393221, 20, 0, -393220, 20, 0, -393219, 20, 0, -393218, 20, 0, -393217, 20, 0, -458752, 20, 0, -458751, 20, 0, -458750, 20, 0, -458749, 20, 0, -458748, 20, 0, -458747, 20, 0, -458746, 20, 0, -458745, 20, 0, -458744, 20, 0, -458743, 20, 0, -458742, 20, 0, -458741, 20, 0, -458740, 20, 0, -327691, 20, 0, -327690, 4, 0, -327689, 4, 0, -327688, 4, 0, -327687, 4, 0, -327686, 4, 0, -327685, 4, 0, -327684, 4, 0, -327683, 4, 0, -327682, 4, 0, -327681, 4, 1, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393213, 4, 0, -393212, 4, 0, -393211, 4, 0, -393210, 4, 0, -393209, 4, 0, -393208, 4, 0, -393207, 4, 65536, -393206, 4, 0, -393205, 4, 0, -393204, 20, 0, -262155, 20, 0, -262154, 4, 0, -262153, 4, 65537, -262152, 4, 0, -262151, 4, 0, -262150, 4, 0, -262149, 4, 65536, -262148, 4, 0, -262147, 4, 65536, -262146, 4, 0, -262145, 4, 0, -327680, 4, 0, -327679, 4, 0, -327678, 4, 65536, -327677, 4, 0, -327676, 4, 0, -327675, 4, 0, -327674, 4, 65536, -327673, 4, 65536, -327672, 4, 0, -327671, 4, 0, -327670, 4, 0, -327669, 4, 0, -327668, 20, 0, -196619, 20, 0, -196618, 4, 0, -196617, 4, 0, -196616, 4, 0, -196615, 4, 0, -196614, 4, 0, -196613, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 4, 65536, -262142, 4, 0, -262141, 4, 0, -262140, 4, 65536, -262139, 4, 0, -262138, 4, 0, -262137, 4, 0, -262136, 4, 65536, -262135, 4, 0, -262134, 4, 1, -262133, 4, 0, -262132, 20, 0, -131083, 20, 0, -131082, 4, 65536, -131081, 4, 0, -131080, 4, 0, -131079, 4, 0, -131078, 4, 65536, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0, -131074, 4, 0, -131073, 4, 0, -196608, 4, 65536, -196607, 4, 65537, -196606, 4, 0, -196605, 4, 65536, -196604, 4, 0, -196603, 4, 65536, -196602, 4, 0, -196601, 4, 65537, -196600, 4, 0, -196599, 4, 0, -196598, 4, 0, -196597, 4, 0, -196596, 20, 0, -65547, 20, 0, -65546, 4, 0, -65545, 4, 0, -65544, 4, 0, -65543, 4, 65536, -65542, 4, 65536, -65541, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 4, 65536, -65537, 4, 65536, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 65537, -131067, 4, 0, -131066, 4, 0, -131065, 4, 65536, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 20, 0, -11, 20, 0, -10, 7, 65536, -9, 7, 65536, -8, 7, 65536, -7, 7, 65536, -6, 7, 65536, -5, 7, 65536, -4, 7, 65536, -3, 7, 65536, -2, 7, 65536, -1, 7, 65536, -65536, 7, 65536, -65535, 7, 65536, -65534, 7, 65536, -65533, 7, 65536, -65532, 7, 65536, -65531, 7, 65536, -65530, 7, 65536, -65529, 7, 65536, -65528, 7, 65536, -65527, 7, 65536, -65526, 7, 65536, -65525, 7, 65536, -65524, 20, 0, 65525, 20, 0, 65526, 7, 65536, 65527, 7, 65536, 65528, 7, 65536, 65529, 7, 65536, 65530, 7, 65536, 65531, 7, 65536, 65532, 7, 65536, 65533, 7, 65536, 65534, 7, 65536, 65535, 7, 65536, 0, 7, 65536, 1, 7, 65536, 2, 7, 65536, 3, 7, 65536, 4, 7, 65536, 5, 7, 65536, 6, 7, 65536, 7, 7, 65536, 8, 7, 65536, 9, 7, 65536, 10, 7, 65536, 11, 7, 65536, 12, 20, 0, 131061, 20, 0, 131062, 7, 65536, 131063, 7, 65536, 131064, 7, 65536, 131065, 7, 65536, 131066, 7, 65536, 131067, 7, 65536, 131068, 7, 65536, 131069, 7, 65536, 131070, 7, 65536, 131071, 7, 65536, 65536, 7, 65536, 65537, 7, 65536, 65538, 7, 65536, 65539, 7, 65536, 65540, 7, 65536, 65541, 7, 65536, 65542, 7, 65536, 65543, 7, 65536, 65544, 7, 65536, 65545, 7, 65536, 65546, 7, 65536, 65547, 7, 65536, 65548, 20, 0, 196597, 20, 0, 196598, 4, 0, 196599, 4, 0, 196600, 4, 65536, 196601, 4, 65537, 196602, 4, 0, 196603, 4, 65536, 196604, 4, 0, 196605, 4, 65536, 196606, 4, 0, 196607, 7, 65536, 131072, 7, 65536, 131073, 7, 65536, 131074, 4, 0, 131075, 4, 0, 131076, 4, 65537, 131077, 4, 0, 131078, 4, 1, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 1, 131084, 20, 0, 262133, 20, 0, 262134, 4, 0, 262135, 4, 0, 262136, 4, 0, 262137, 4, 0, 262138, 4, 0, 262139, 4, 1, 262140, 7, 131072, 262141, 4, 65537, 262142, 4, 0, 262143, 7, 65536, 196608, 7, 65536, 196609, 7, 65536, 196610, 4, 0, 196611, 4, 65536, 196612, 4, 0, 196613, 4, 65536, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 20, 0, 327669, 20, 0, 327670, 4, 0, 327671, 4, 65536, 327672, 4, 0, 327673, 4, 0, 327674, 4, 65537, 327675, 4, 65537, 327676, 7, 131072, 327677, 4, 65537, 327678, 4, 65537, 327679, 7, 65536, 262144, 7, 65536, 262145, 7, 65536, 262146, 4, 65536, 262147, 4, 0, 262148, 4, 65536, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 20, 0, 393205, 20, 0, 393206, 4, 0, 393207, 4, 65536, 393208, 4, 0, 393209, 4, 0, 393210, 4, 0, 393211, 4, 1, 393212, 7, 131072, 393213, 4, 65537, 393214, 4, 65536, 393215, 7, 65536, 327680, 7, 65536, 327681, 7, 65536, 327682, 4, 65536, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 20, 0, 458741, 20, 0, 458742, 4, 65537, 458743, 4, 0, 458744, 4, 0, 458745, 4, 0, 458746, 4, 1, 458747, 4, 65537, 458748, 4, 0, 458749, 4, 0, 458750, 4, 0, 458751, 7, 65536, 393216, 7, 65536, 393217, 7, 65536, 393218, 4, 65536, 393219, 4, 65537, 393220, 4, 65536, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 20, 0, 524277, 20, 0, 524278, 4, 0, 524279, 4, 0, 524280, 4, 0, 524281, 4, 0, 524282, 4, 0, 524283, 4, 65537, 524284, 4, 0, 524285, 4, 0, 524286, 4, 65536, 524287, 7, 65536, 458752, 7, 65536, 458753, 7, 65536, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 1, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 65536, 458764, 20, 0, 589813, 20, 0, 589814, 20, 0, 589815, 20, 0, 589816, 20, 0, 589817, 20, 0, 589818, 20, 0, 589819, 20, 0, 589820, 20, 0, 589821, 20, 0, 589822, 20, 0, 589823, 20, 0, 524288, 20, 0, 524289, 20, 0, 524290, 20, 0, 524291, 20, 0, 524292, 20, 0, 524293, 20, 0, 524294, 20, 0, 524295, 20, 0, 524296, 20, 0, 524297, 20, 0, 524298, 20, 0, 524299, 20, 0, 524300, 20, 0 )

[node name="floor2" type="TileMap" parent="."]
position = Vector2( 161, 87 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -10, 11, 1, -9, 11, 1, -8, 11, 1, -7, 11, 1, -6, 11, 1, -5, 11, 1, -4, 11, 1, -3, 11, 1, -2, 11, 1, -1, 11, 1, -65536, 11, 1, -65535, 11, 1, -65534, 11, 1, -65533, 11, 1, -65532, 11, 1, -65531, 11, 1, -65530, 11, 1, -65529, 11, 1, -65528, 11, 1, -65527, 11, 1, -65526, 11, 1, -65525, 11, 1, 131062, 11, 131073, 131063, 11, 131073, 131064, 11, 131073, 131065, 11, 131073, 131066, 11, 131073, 131067, 11, 131073, 131068, 11, 131073, 131069, 11, 131073, 131070, 11, 131073, 131071, 11, 4, 65537, 11, 3, 65538, 11, 131073, 65539, 11, 131073, 65540, 11, 131073, 65541, 11, 131073, 65542, 11, 131073, 65543, 11, 131073, 65544, 11, 131073, 65545, 11, 131073, 65546, 11, 131073, 65547, 11, 131073, 196607, 11, 65536, 131073, 11, 65538, 262139, 11, 0, 262140, 11, 1, 262141, 11, 2, 262143, 11, 65536, 196609, 11, 65538, 196613, 2, 0, 196614, 2, 1, 196615, 2, 1, 196616, 2, 1, 196617, 2, 1, 196618, 2, 2, 327675, 11, 65536, 327677, 11, 65538, 327679, 11, 65536, 262145, 11, 65538, 262149, 2, 65536, 262150, 4, 1, 262151, 10, 0, 262152, 10, 0, 262154, 2, 65538, 393211, 11, 131072, 393212, 11, 131073, 393213, 11, 131074, 393215, 11, 65536, 327681, 11, 65538, 327685, 2, 65536, 327687, 10, 0, 327688, 10, 0, 327690, 2, 65538, 458751, 11, 65536, 393217, 11, 65538, 393221, 2, 131072, 393222, 2, 131073, 393223, 10, 2, 393224, 10, 2, 393225, 2, 131073, 393226, 2, 131074, 524287, 11, 65536, 458753, 11, 65538 )

[node name="floor3" type="TileMap" parent="."]
position = Vector2( 161, 87 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327686, 16, 0, -327685, 16, 1, -327684, 16, 1, -327683, 16, 1, -327682, 16, 1, -327681, 16, 2, -262150, 16, 65536, -262145, 16, 65538, -196614, 16, 65536, -196609, 16, 65538, -131078, 16, 131072, -131077, 16, 1, -131076, 16, 1, -131075, 14, 0, -131074, 14, 1, -131073, 16, 131074, -65539, 14, 1, -65538, 14, 0, 262140, 18, 0 )

[node name="forest1Chap2_pos" type="Position2D" parent="."]
position = Vector2( 327, 94 )

[node name="forest1Chap2" parent="." instance=ExtResource( 5 )]
position = Vector2( 348, 95 )

[node name="gandalfHouse_ground_pos" type="Position2D" parent="."]
position = Vector2( 130, 65 )

[node name="gandalfHouse_ground" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 40 )
rotation = 1.56778

[node name="path_arrow" parent="." instance=ExtResource( 8 )]
position = Vector2( 314, 93 )
z_index = 1
tile_data = PoolIntArray( -3735743, 0, 0, -196577, 0, 0 )

[node name="YSort" type="YSort" parent="."]
position = Vector2( 314, 93 )

[node name="analexius" parent="YSort" instance=ExtResource( 15 )]
position = Vector2( -121, 77 )

[node name="Gandalf" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( -160, -25 )

[node name="player" parent="YSort" instance=ExtResource( 6 )]
z_index = 2

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/player"]
remote_path = NodePath("../../Camera2D")

[node name="path" type="YSort" parent="YSort"]

[node name="path_arrow" parent="YSort/path" instance=ExtResource( 8 )]
tile_data = PoolIntArray( 7339885, 0, 0 )

[node name="obj" type="YSort" parent="YSort"]
position = Vector2( -314, -93 )

[node name="haus" parent="YSort/obj" instance=ExtResource( 1 )]
position = Vector2( 115, 8 )
scale = Vector2( 0.15, 0.15 )

[node name="tree1" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 202, 7 )

[node name="tree2" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 222, 33 )

[node name="tree7" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 139, 113 )

[node name="tree8" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 199, 112 )

[node name="tree9" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 199, 174 )

[node name="tree10" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 137, 177 )

[node name="tree11" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 317, 111 )

[node name="tree12" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 49, 110 )

[node name="tree5" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 50, 12 )

[node name="tree6" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 23, 34 )

[node name="tree3" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 291, 34 )

[node name="tree4" parent="YSort/obj" instance=ExtResource( 3 )]
position = Vector2( 312, 8 )

[node name="Node2D" parent="YSort/obj" instance=ExtResource( 4 )]
position = Vector2( 259, -1 )

[node name="Node2D2" parent="YSort/obj" instance=ExtResource( 4 )]
position = Vector2( 33, 161 )

[node name="magical_chest" parent="YSort/obj" instance=ExtResource( 16 )]
position = Vector2( 288, 176 )

[node name="Camera2D" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 0, 0 )

[node name="TopLeft" parent="YSort/Camera2D/Limits" index="0"]
position = Vector2( 1, -10 )

[node name="BottomRight" parent="YSort/Camera2D/Limits" index="1"]
position = Vector2( 353, 215 )

[node name="objecthia_path" type="Area2D" parent="YSort"]
position = Vector2( -308, 2 )
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/objecthia_path"]
shape = SubResource( 2 )

[node name="classoria_path" type="Area2D" parent="YSort"]
position = Vector2( -145, 116 )
rotation = 1.57079
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/classoria_path"]
shape = SubResource( 2 )

[node name="forest2Chap2_pos" type="Position2D" parent="."]
position = Vector2( 169, 188 )

[node name="forest2Chap2" parent="." instance=ExtResource( 5 )]
position = Vector2( 170, 210 )
rotation = 1.56778

[node name="TopUi" type="CanvasLayer" parent="."]

[node name="pause_game" type="TextureButton" parent="TopUi"]
margin_left = 292.0
margin_top = 3.0
margin_right = 312.0
margin_bottom = 23.0
texture_normal = ExtResource( 9 )

[node name="HealthUI" parent="TopUi" instance=ExtResource( 12 )]
margin_left = 3.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 14.0

[node name="quest" type="TextureButton" parent="TopUi"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pause_menu" parent="TopUi" instance=ExtResource( 11 )]

[node name="Label2" type="Label" parent="TopUi"]
margin_left = 132.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="objectiaRoad_pos" type="Position2D" parent="."]
position = Vector2( 25, 95 )

[node name="objectiaRoad" parent="." instance=ExtResource( 5 )]
position = Vector2( 6, 95 )

[connection signal="body_shape_entered" from="YSort/objecthia_path" to="." method="objecthia_lock_path_dialogue"]
[connection signal="body_shape_entered" from="YSort/classoria_path" to="." method="classoria_path_lock_dialogue"]
[connection signal="pressed" from="TopUi/pause_game" to="." method="_on_pause_game_pressed"]

[editable path="YSort/Camera2D"]
